jm api更换域名