@@ -62,7 +62,7 @@ public class TraceSearchAnimeHandler implements IAllMessageEvent {
     public boolean onMessage(Bot bot, Message message) {
         Message replyMessage = replySearch(bot, message);
         if(replyMessage != null){
-            startSearch(bot,message,replyMessage,replyMessage.getPicUrls().get(0),null);
+            startSearch(bot,message,replyMessage,replyMessage.getPicUrls().getFirst(),null);
             return true;
         }
 
@@ -70,7 +70,7 @@ public class TraceSearchAnimeHandler implements IAllMessageEvent {
         String key = getKey(String.valueOf(message.getSelfId()), String.valueOf(message.getUserId()), String.valueOf(message.getGroupId()));
         if(cache.contains(key) && CollectionUtils.isNotEmpty(picMessageData)){
             // 存在缓存 并且 图片不为空
-            startSearch(bot,message,null,picMessageData.get(0).getUrl(),key);
+            startSearch(bot,message,null,picMessageData.getFirst().getUrl(),key);
             return true;
         }
         boolean matches = matches(message);
@@ -80,7 +80,7 @@ public class TraceSearchAnimeHandler implements IAllMessageEvent {
                 cache.add(key);
                 bot.sendMessage(message.getUserId(),message.getGroupId(),message.getMessageType(),"图呢！",true);
             }else {
-                startSearch(bot,message,null,picMessageData.get(0).getUrl(),key);
+                startSearch(bot,message,null,picMessageData.getFirst().getUrl(),key);
             }
             return true;
         }
@@ -188,8 +188,8 @@ public class TraceSearchAnimeHandler implements IAllMessageEvent {
         if (message.isReplyMsg() && message.isTextMsg()) {
             if (message.getText(0).trim().matches(RegexEnum.SEARCH_ANIME.getValue())) {
                 List<String> replyMsgIds = message.getReplyMsgIds();
-                Message msg = bot.getMsg(replyMsgIds.get(0),2L * 1000L).getData();
-                log.debug("回复式识番，根据msgId获取消息 {} {}",replyMsgIds.get(0), JSONObject.toJSONString(msg));
+                Message msg = bot.getMsg(replyMsgIds.getFirst(),2L * 1000L).getData();
+                log.debug("回复式识番，根据msgId获取消息 {} {}",replyMsgIds.getFirst(), JSONObject.toJSONString(msg));
                 if(msg != null && msg.isPicMsg()){
                     return msg;
                 }
@@ -204,7 +204,7 @@ public class TraceSearchAnimeHandler implements IAllMessageEvent {
         if(CollectionUtils.isEmpty(texts)){
             return false;
         }
-        String msg = texts.get(0).trim();
+        String msg = texts.getFirst().trim();
         String[] split = RegexEnum.SEARCH_ANIME.getValue().split("\\|");
         for (String s : split) {
             if(s.equals(msg)){
